--- a/app/views/admin/quotes/new.html.erb
+++ b/app/views/admin/quotes/new.html.erb
@@ -1,1 +1,53 @@
-hogehoge
+<div class="row">
+  <!-- left column -->
+  <div class="col-md-12">
+    <!-- general form elements -->
+    <div class="box box-primary">
+      <div class="box-header with-border">
+        <h3 class="box-title">見積作成</h3>
+      </div>
+      <form id="form">
+        <div class="box-body">
+          <div class="form-group">
+            <label><%= Quote.human_attribute_name :name %></label>
+            <input type="text" class="form-control" v-model="quote.name"/>
+          </div>
+          <div class="form-group">
+            <label><%= Quote.human_attribute_name :quoted_at %></label>
+            <input type="text" class="form-control datepicker" v-model="quote.quoted_at" />
+          </div>
+        </div>
+
+        <div class="box-header">
+          <h3 class="box-title">明細</h3>
+        </div>
+
+        <div class="box-body">
+          <table class="table table-bordered table-hover dataTable">
+            <thead>
+            <tr role="row">
+              <th>商品名</th>
+              <th>金額</th>
+              <th>数量</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr v-for="detail in details">
+              <td>{{ detail.item_name }}</td>
+              <td>{{ detail.amount }}</td>
+              <td>{{ detail.quantity }}</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="box-footer">
+          <a class="btn btn-primary" v-on:click="addRow">行を追加</a>
+          <a class="btn btn-primary" v-on:click="create">登録</a>
+        </div>
+      </form>
+    </div>
+  </div>
+  <!--/.col (right) -->
+</div>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<%= javascript_include_tag 'admin/quotes' %>
