--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -5,8 +5,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
+    <%= stylesheet_link_tag    'admin/application', media: 'all' %>
+    <%= javascript_include_tag 'admin/application' %>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
   </head>
 
@@ -35,10 +35,10 @@
       <!-- Main content -->
       <section class="content">
         <!-- Info boxes -->
+        <%= yield %>
       </section>
       <!-- /.content -->
     </div>
-    <%= yield %>
   </div>
   </body>
 </html>
