--- a/app/views/admin/quotes/_form.html.erb
+++ b/app/views/admin/quotes/_form.html.erb
@@ -7,8 +7,6 @@
         <h3 class="box-title">見積作成</h3>
       </div>
       <form id="form">
-        <loading :active.sync="isLoading" :can-cancel="true" :on-cancel="whenCancelled"></loading>
-        <pulse-loader v-bind:loading="false">
         <div class="box-body">
           <div class="form-group">
             <label><%= Quote.human_attribute_name :name %></label>
@@ -23,6 +21,9 @@
             <input type="text" class="form-control datepicker" v-model="quote.contact" />
           </div>
         </div>
+
+        <pulse-loader v-bind:loading="display"></pulse-loader>
+        <div id="overlay" v-bind:style="{ display: display ? 'block' : 'none' }"></div>
 
         <div class="box-header">
           <h3 class="box-title">明細</h3>
@@ -52,11 +53,29 @@
           <a class="btn btn-primary" v-on:click="addRow">行を追加</a>
           <a class="btn btn-primary" v-on:click="create">登録</a>
         </div>
-      </pulse-loader>
       </form>
     </div>
   </div>
   <!--/.col (right) -->
 </div>
+<style>
+  #overlay {
+    position: fixed; /* Sit on top of the page content */
+    display: block; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+    z-index: 1; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
+  }
 
+  .v-spinner {
+    position: relative;
+    z-index: 1000;
+  }
+</style>
 <%= javascript_include_tag 'admin/quotes' %>
